# cc-monitor

./: .gitignore  CLAUDE.md  README.md  SPEC.md  pyproject.toml
attribviewer/: __main__.py  parser.py  session.py  state.py  view.py
cc_monitor/: __main__.py
