[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "attribviewer"
version = "0.1.0"
description = "Sidecar consumption attribution viewer for Claude Code sessions."
requires-python = ">=3.11"
dependencies = ["rich>=13.7"]

[project.scripts]
attribviewer = "attribviewer.__main__:main"

[tool.setuptools.packages.find]
include = ["attribviewer*"]
